fix: add spacing below the links

--- a/styles/movie.css
+++ b/styles/movie.css
@@ -24,7 +24,7 @@ body{
 #content-container{
 	margin: auto;
 	width: 800px;
-	min-height: 1000px;
+	min-height: 1020px;
 	position: relative;
 	border-radius: 20px;
 	border: 4px solid gray;
